# doodlai_jump

./: .gitignore  Cargo.toml  nn.backup  nnt.json  readme.md  sim.backup
crates/ai-player/: Cargo.toml
crates/ai-player/src/: lib.rs
crates/display/: Cargo.toml
crates/display/src/: main.rs
crates/display/src/assets/: mod.rs
crates/display/src/render/: draw_param.rs  mod.rs
crates/display/src/ui/: position.rs
crates/doodl-jump/: Cargo.toml
crates/doodl-jump/src/: lib.rs  platform.rs  player.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs
crates/trainer/: Cargo.toml
crates/trainer/src/: cli.rs  lib.rs  main.rs
display/: Cargo.toml  readme.md
display/src/: config.rs  main.rs  nnt.json
display/src/assets/: file.rs  mod.rs
display/src/assets/loader/: resolver.rs
display/src/assets/sprite/: sprite_id.rs
display/src/assets/texture/: image_type.rs
display/src/gui/pause_menu/: mod.rs
display/src/render/: draw_param.rs
display/src/ui/: anchor.rs  element.rs  event.rs  mod.rs  position.rs  register.rs  vector.rs
display/src/ui/element/: button.rs  graph.rs  image.rs  text.rs  text_edit.rs
display/src/ui/style/: background.rs  border.rs
display/src/utils/: framestats.rs
game/: Cargo.toml
game/src/: enemy.rs  lib.rs  platform.rs  player.rs
resources/internal/sprite/: resolver.ron
resources/textures/: resolver.ron
ring/: Cargo.toml
ring/src/: agent.rs  lib.rs  main.rs  nnt.json
scripts/: dependency_checker.py
