[workspace]
resolver = "1"
members = [
    "crates/math",
    "crates/doodl-jump",
    "crates/trainer",
    "crates/display"
]
exclude = [
]

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
log = "0.4.29"
logger = {git = "https://github.com/Bowarc/Crates.git", package = "logger"}
time = {git = "https://github.com/Bowarc/Crates.git", package = "time"}
random = {git = "https://github.com/Bowarc/Crates.git", package = "random"}
math = { path = "crates/math" }
glam = "0.30.5"
neat = { version = "1.0.2",  features = ["serde"] }
serde_json = "1.0.149"
genetic-rs = { version = "1.3.0", features = ["derive"] }
doodl-jump = { path = "crates/doodl-jump" }
bincode-next = { version = "2.1.0", features = ["serde"] }