[workspace]
resolver = "1"
members = [
    "crates/math",
    "crates/doodl-jump",
    "crates/trainer",
    "crates/display"
, "crates/ai-player"]
exclude = [
]

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
log = "0.4.29"

time = {git = "https://github.com/Bowarc/Crates.git", package = "time"}
random = {git = "https://github.com/Bowarc/Crates.git", package = "random"}
math = { path = "crates/math" }
# neat = { version = "1.0.2",  features = ["serde"] }
neat = { git = "https://github.com/HyperCodec/neat", branch = "speciation", features = ["serde"] }
genetic-rs = { version = "1.4.1", features = ["derive"] }
doodl-jump = { path = "crates/doodl-jump" }
ai-player = { path = "crates/ai-player" }
bincode-next = { version = "2.1.0", features = ["serde"] }
env_logger = "0.11.9"
