[package]
name = "display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "display"
path = "src/main.rs"

[dependencies]
ggez = "0.9.3"

game = { path = "../game" }
ring = { path = "../ring" }

ggegui = { git = "https://github.com/Bowarc/ggegui" }
threading = { git = "https://github.com/Bowarc/Crates.git", package = "threading" }
stp = { git = "https://github.com/bowarc/stp" }
camera2d_ggez = { git = "https://github.com/bowarc/camera2d_ggez" }

## This is bad, I need different versions of ggez for different projects and I don't actually know how to do it
math = { git = "https://github.com/Bowarc/Crates.git", package = "math", features = [
  "ggez",
] }

enum_dispatch = "0.3.13"
derivative = "2.2.0"

serde = { version = "1.0.228", features = ["derive"] }
ron = "0.8.1"

spin_sleep = "1.3.3"
log.workspace = true
logger.workspace = true
time.workspace = true
random.workspace = true

neat.workspace = true
serde_json.workspace = true

strum = "0.28.0"
strum_macros = "0.28.0"
