[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "game"
crate-type = ["rlib"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
ggez.workspace = true
log.workspace = true
networking.workspace = true
time.workspace = true
ron.workspace = true
lazy_static = "1.4.0"
enum_variant_name.workspace = true
logger.workspace = true
