[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "game"
crate-type = ["rlib"]

[dependencies]
time.workspace = true
logger.workspace = true
random.workspace = true
maths.workspace = true



