[package]
name = "trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doodl-jump.workspace = true
ctrlc = "3.5.2"
log.workspace = true
logger.workspace = true
time.workspace = true
rand = "0.8.5"
math.workspace =true
serde_json.workspace = true
rayon = "1.11.0"
neat.workspace = true
indicatif = "0.17.11"
plotters = "0.3.7"
genetic-rs.workspace = true
