[package]
name = "trainer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doodl-jump.workspace = true
ai-player.workspace = true
ctrlc = "3.5.2"
log.workspace = true
time.workspace = true
rand = "0.10.0"
neat.workspace = true
plotters = "0.3.7"
genetic-rs.workspace = true
bincode-next.workspace = true
genetic-rs-extras = { version = "0.1.1", features = ["indicatif", "plotters"] }
clap = { version = "4.5.60", features = ["derive"] }
env_logger.workspace = true
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
